--- a/notebook_ml/S1_1_Classification.ipynb
+++ b/notebook_ml/S1_1_Classification.ipynb
@@ -2092,17 +2092,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
-        "id": "8mcDqCEPZTMi"
+        "id": "8mcDqCEPZTMi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8531bbd2-d682-4b30-ca60-404dd2a46142"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The accuracy for our model training on augmented data is 97.5%!\n"
+          ]
+        }
+      ],
       "source": [
         "# Let's get the predictions from our model\n",
-        "y_pred = _____.predict(______)\n",
+        "y_pred = knn_clf.predict(X_test)\n",
         "\n",
         "# And use them to calculate the accuracy\n",
-        "accuracy = accuracy_score(_____, _____)\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
         "\n",
         "# We'll finish by printing out our accuracy...\n",
         "print(f'The accuracy for our model training on augmented data is {accuracy:.1%}!')"
